# label-classification-repo

./: .gitignore  LICENSE.md  README.md  __main__.py  requirements.txt  setup.cfg
doc/: 01Tutorial_WebCrawler.md  02Tutorial_DataCleansing.md  03Tutorial_DataLabeling.md  04Tutorial_Textclassification.md  Tutorial_WebCrawler.md  scraper.py  seeder.py  topic.py
environment/: requirements.txt
files/: CLASS_keywords.json  GITHUB_TOKEN.json  Seed.xlsx  Seed_de.feather  Seed_en.feather  TOPIC_Classes.xlsx  TOPIC_Seed.xlsx  TOPIC_Text.xlsx  URL_Seed.xlsx
files/01_crawl/: pristine_raw_texts_en.feather
files/02_clean/evaluation_data/: evaluation_cleaned_texts_de.feather  evaluation_cleaned_texts_en.feather  evaluation_labeled_texts_de.feather  evaluation_labeled_texts_en.feather  evaluation_topiced_texts_de.feather  evaluation_topiced_texts_en.feather
files/03_label/k_Means/: kMeans_cluster_de.feather  kMeans_cluster_en.feather
files/05_evaluation/: evaluation_raw_texts_de.feather
models/label/: trained_model_de_TOPIC.pkl  trained_model_de_URL_TEXT.pkl  trained_model_en_TOPIC.pkl  trained_model_en_URL_TEXT.pkl
models/label/Experiment1/: trained_model_en_URL_TEXT.pkl
src/: evaluation.py
src/automated_label/: cluster_kmeans.py  label.py
src/classifier/: classifier_model.py  classifier_model_en.py  classifier_model_en_old.py  classifier_model_ger.py
src/cleans/: clean.ipynb  clean.py  lda_coherence.py  nlp_lda.py  pre_clean.py  topic_lda.py
src/evaluation/: evaluation.py
src/scrapes/: scraper.py
src/topic_scrape/: seed_scraper.py
(+8 files in other folders)
