[metadata]
name = TALC
version = 0.0.1
license = MIT
description = TALC - Topic based automated labeled classifer. The project is resolving in a trained and adapted classifer to predict topics and trends in the (german) automotive industry.
long_description = file: README.md
author = Luisa Gloger
author_email = lg093@hdm-stuttgart.de
classifiers=
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Topic :: Software Development :: Libraries :: Python Modules
[options]
python_requires = >= 2.7
packages = find:
package_dir =
    =src
include_package_data = True
install_requires = parse_requirements('requirements.txt', session='learn')
[options.packages.find]
where=src
[options.package_data]
* = *.txt, *.rst, *.feather,*.parquet